--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.16.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "motion": "^12.23.26",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18"
