--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@lib/*": ["src/lib/*"],
+      "@core/*": ["src/core/*"],
       "@types/*": ["src/types/*"],
       "@utils/*": ["src/utils/*"]
     },
