--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev --host",
+    "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview --host",
+    "preview": "astro preview",
     "astro": "astro",
     "test": "vitest",
     "test:run": "vitest run"
