--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,60 +6,65 @@ on:
     paths:
       - 'src/**'
       - 'public/**'
+      - 'astro.config.mjs'
       - 'package.json'
       - 'package-lock.json'
-      - 'astro.config.mjs'
-      - 'tailwind.config.mjs'
-      - 'tsconfig.json'
-      - 'vitest.config.ts'
-      - '.github/workflows/deploy.yml'
+      - '.github/workflows/**'
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 concurrency:
-  group: 'pages'
+  group: pages
   cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - name: チェックアウト
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Node.jsのセットアップ
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
 
-      - name: 依存関係のインストール
-        run: npm ci
+      - run: npm ci
 
-      - name: Astroプロジェクトのビルド
-        run: npm run build
-        env:
-          NODE_ENV: production
+      - name: Astro型チェック
+        run: npx astro check
 
-      - name: GitHub Pagesのセットアップ
-        uses: actions/configure-pages@v4
+      - name: Viteキャッシュ
+        uses: actions/cache@v4
+        with:
+          path: node_modules/.vite
+          key: vite-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
 
-      - name: ビルド成果物のアップロード
-        uses: actions/upload-pages-artifact@v3
+      - run: npm run build
+
+      - name: dist存在チェック
+        run: |
+          test -d dist
+          test "$(ls -A dist)"
+
+      - name: baseパス検証
+        run: |
+          grep -R "/year-remaining/" dist || (echo "base path missing" && exit 1)
+
+      - uses: actions/configure-pages@v4
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
-      - name: GitHub Pagesへデプロイ実行
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v4
